--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.2.0",
-    "@angular/cdk": "^13.3.9",
+    "@angular/cdk": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
-    "@angular/material": "^13.3.9",
-    "@angular/material-moment-adapter": "^13.3.9",
+    "@angular/material": "^14.2.0",
+    "@angular/material-moment-adapter": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "moment": "^2.24.0",
-    "rxjs": "~6.6.7",
+    "rxjs": "^7.5.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
